40.6.1 (14-02-2023)
- Bug fix: When checking if attends is valid, test also enrolment execution interval

40.6.0 (13-02-2023)
- Refactor: Remove deprecated relation between execution degree and campus
- New Feature: Add conclusion number to conclusionProcess and conclusionProcessVersion

40.5.1 (06-02-2023)
- Improvement: Revert description of 'Not Approved' enrolment state 
- Refactor: Infer if registration is active via registration state type

40.5.0 (06-02-2023)
- Refactor: Remove deprecated entity Department

40.4.0 (01-02-2023)
- Refactor: Cleanup lessons, spaces and occupations code
- Refactor: Remove unused service for execution courses creation
- Refactor: Remove deprecated method to find competence course information
- Refactor: Remove deprecated entity CompetenceCourseInformationChangeRequest

40.3.4 (30-01-2023)
- Improvement: Change description of 'Not Approved' enrolment state 
- Improvement: Made compatible with new access control API

40.3.3 (28-01-2023)
- Refactor: Program Conclusion - remove RegistrationStateTypeEnum slot 
- Bug fix: Corrected issue in callback URL when using CAS

40.3.2 (16-01-2023)
- Refactor: Set CET/DET school level as higher education

40.3.1 (06-01-2023)
- Refactor: Add method to check if attends is valid

40.3.0 (29-12-2022)
- Refactor: Program Conclusion - replace usage of RegistrationStateTypeEnum by RegistrationStateType

40.2.1 (29-12-2022)
- Refactor: Remove creationDateDateTime attribute from ExternalEnrolment
- Refactor: Rename creationDateDateTime attribute of external enrolment (step 2/2)
- Refactor: Remove RegistrationStateType bootstrap on system init
- Bug fix: Competence course parent units method should include course group unit aggregator


40.2.0 (20-12-2022)
- Refactor: Replace usage of RegistrationStateTypeEnum by RegistrationStateType

40.1.1 (19-12-2022)
- Refactor: Rename normalizedEctsGrade attribute of external enrolment
- Refactor: Rename creationDateDateTime attribute of external enrolment (step 1)