@@ -1,3 +1,5 @@
+- Improvement: Add conclusion number to RegistrationConclusionBean
+
 40.6.1 (14-02-2023)
 - Bug fix: When checking if attends is valid, test also enrolment execution interval
 
